backend/test_py.txt
  File "<string>", line 1
    "print('STARTING');
    ^
SyntaxError: unterminated string literal (detected at line 1)
